add additional files

--- a/KitchenModel.html
+++ b/KitchenModel.html
@@ -7,190 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitchen Model</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/modelSlides.css">
-    <style>
-        /* .slideshow {
-            width: 95%;
-            max-width: 1450px;
-            position: relative;
-            margin: auto;
-        }
-
-        .slideshow__slide {
-            display: none;
-        }
-
-        .slideshow img {
-            width: 100%;
-            box-shadow: 1px 2px 4px rgb(0 0 0 / 0.16);
-            border-radius: 10px;
-        }
-
-        .prev,
-        .next {
-            width: auto;
-            cursor: pointer;
-            position: absolute;
-            top: 50%;
-            margin-top: -22px;
-            padding: 16px;
-            font-weight: bold;
-            font-size: 18px;
-            transition: 0.6s ease;
-            border-radius: 0 3px 3px 0;
-            color: white;
-        }
-
-        .next {
-            right: 0;
-            border-radius: 3px 0 0 3px;
-        }
-
-        .prev:hover,
-        .next:hover {
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-
-        .slideshow__carousel {
-            width: 95%;
-            height: auto;
-            max-width: 1450px;
-            position: relative;
-            margin: auto;
-            margin-top: 20px;
-            margin-bottom: 50px;
-            padding: 0;
-            white-space: nowrap;
-            overflow-x: auto;
-        }
-
-        .slideshow__carousel::-webkit-scrollbar {
-            background-color: #CDCDCD;
-            height: 18px;
-            border-radius: 14px;
-        }
-
-        .slideshow__carousel::-webkit-scrollbar-thumb {
-            background-color: #5A5A5A;
-            min-width: 20%;
-            border-radius: 10px;
-        }
-
-        .slideshow__button {
-            height: 120px;
-            border-radius: 10px;
-            margin-right: 5px;
-            cursor: pointer;
-            border: 2px solid #f3f3f3;
-            transition: border 0.3s ease;
-            box-shadow: 1px 2px 4px rgb(0 0 0 / 0.16);
-        }
-
-        .active,
-        .slideshow__button:hover {
-            border: 2px solid #516DC9;
-        }
-
-        @media only screen and (max-width:1024px) {
-
-            .prev,
-            .next {
-                width: auto;
-                cursor: pointer;
-                position: absolute;
-                top: 50%;
-                margin-top: -22px;
-                padding: 16px;
-                font-weight: bold;
-                font-size: 18px;
-                transition: 0.6s ease;
-                border-radius: 0 3px 3px 0;
-                color: white;
-            }
-
-            .next {
-                right: 0;
-                border-radius: 3px 0 0 3px;
-            }
-
-            .prev:hover,
-            .next:hover {
-                background-color: none;
-            }
-
-            .slideshow__carousel::-webkit-scrollbar {
-                height: 12px;
-            }
-
-            .slideshow__button {
-                height: 80px;
-            }
-        }
-
-        @media only screen and (max-width:768px) {
-            .slideshow {
-                width: 100%;
-            }
-
-            .slideshow img {
-                border-radius: 0px;
-            }
-
-            .slideshow__carousel {
-                margin-top: 10px;
-                margin-bottom: 40px;
-            }
-
-            .slideshow__button {
-                height: 60px;
-            }
-        }
-
-        .modelInfo {
-            width: 95%;
-            max-width: 1450px;
-            margin: auto;
-            margin-bottom: 100px;
-            text-align: center;
-        }
-
-        .modelInfo h2 {
-            font-size: 40px;
-            line-height: 1em;
-            font-weight: 500;
-            color: #696969;
-            margin: 0 0 15px;
-        }
-
-        .modelInfo p {
-            font-size: 23px;
-            font-weight: 300;
-            line-height: 1.5em;
-            margin: 0;
-            color: #696969;
-        }
-
-        @media only screen and (max-width:1024px) {
-            .modelInfo h2 {
-                font-size: 28px;
-            }
-
-            .modelInfo p {
-                font-size: 20px;
-            }
-        }
-
-        @media only screen and (max-width:768px) {
-            .modelInfo h2 {
-                font-size: 24px;
-                margin-bottom: 10px;
-            }
-
-            .modelInfo p {
-                font-size: 16px;
-            }
-        } */
-    </style>
 </head>
 
 <body>
