--- a/3D.html
+++ b/3D.html
@@ -48,9 +48,9 @@
             </div>
 
             <div class="models__containerRight">
-                <img src="images/GunRender.jpg" alt="" class="models_preview">
+                <img src="images/Gun/GunRender.jpg" alt="" class="models_preview">
                 <h2 class="models__title">Gun Model</h2>
-                <a href="" class="models__link">See More ></a>
+                <a href="GunModel.html" class="models__link">See More ></a>
                 <p class="models__discription">A gun modeled based of the Glock 17 Gen5 pistol.</p>
             </div>
         </div>
@@ -64,9 +64,9 @@
             </div>
 
             <div class="models__containerRight">
-                <img src="images/WizardSceneRender.jpg" alt="" class="models_preview">
+                <img src="images/Wizard/WizardSceneRender.jpg" alt="" class="models_preview">
                 <h2 class="models__title">Wizard Scene</h2>
-                <a href="" class="models__link">See More ></a>
+                <a href="WizardScene.html" class="models__link">See More ></a>
                 <p class="models__discription">A scene of a wizard’s desk late at night.</p>
             </div>
         </div>
