--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="projects__container">
                 <div class="projects__models">
                     <img src="images/Kitchen/KitchenRender1.jpg" alt="">
-                    <img src="images/GunRender.jpg" alt="">
+                    <img src="images/Gun/GunRender.jpg" alt="">
                     <a href="3D.html"><button class="projects__button">See My 3D Work!</button></a>
                 </div>
                 <div class="projects__designs">
