--- a/3D.html
+++ b/3D.html
@@ -14,18 +14,26 @@
 <body>
 
     <!-- navigation -->
-    <div class="logo">JM</div>
+    <div class="logo">
+        <a href="index.html">
+            <img src="images/JonathanMaIcon.svg" alt="" class="nav__smallImage">
+        </a>
+    </div>
 
 
     <div class="nav">
-        <div class="nav__logo">JM</div>
+        <div class="nav__logo">
+            <a href="index.html">
+                <img src="images/JonathanMaIcon.svg" alt="">
+            </a>
+        </div>
         <ul class="nav__list">
             <a href="index.html">
                 <li class="nav__link">HOME</li>
             </a>
-            <a href="WebDesigns.html">
+            <!-- <a href="WebDesigns.html">
                 <li class="nav__link">WEB DESIGNS</li>
-            </a>
+            </a> -->
             <a href="3D.html">
                 <li class="nav__linkActive">3D MODELS</li>
             </a>
@@ -41,14 +49,14 @@
 
         <div class="models__row">
             <div class="models__containerLeft">
-                <img src="images/SeraphineRender.jpg" alt="" class="models_preview">
+                <a href=""><img src="images/SeraphineRender.jpg" alt="" class="models_preview"></a>
                 <h2 class="models__title">Seraphine Model</h2>
                 <a href="" class="models__link">See More ></a>
                 <p class="models__discription">A modeled based off of Seraphine from League of Legends.</p>
             </div>
 
             <div class="models__containerRight">
-                <img src="images/Gun/GunRender.jpg" alt="" class="models_preview">
+                <a href="GunModel.html"><img src="images/Gun/GunRender.jpg" alt="" class="models_preview"></a>
                 <h2 class="models__title">Gun Model</h2>
                 <a href="GunModel.html" class="models__link">See More ></a>
                 <p class="models__discription">A gun modeled based of the Glock 17 Gen5 pistol.</p>
@@ -57,14 +65,16 @@
 
         <div class="models__row">
             <div class="models__containerLeft">
-                <img src="images/Kitchen/KitchenRender1.jpg" alt="" class="models_preview">
+                <a href="KitchenModel.html"><img src="images/Kitchen/KitchenRender1.jpg" alt=""
+                        class="models_preview"></a>
                 <h2 class="models__title">Kitchen Scene</h2>
                 <a href="KitchenModel.html" class="models__link">See More ></a>
-                <p class="models__discription">A scene based off of my parents kitchen in Maine.</p>
+                <p class="models__discription">A scene based off of my parent's kitchen in Maine.</p>
             </div>
 
             <div class="models__containerRight">
-                <img src="images/Wizard/WizardSceneRender.jpg" alt="" class="models_preview">
+                <a href="WizardScene.html"><img src="images/Wizard/WizardSceneRender.jpg" alt=""
+                        class="models_preview"></a>
                 <h2 class="models__title">Wizard Scene</h2>
                 <a href="WizardScene.html" class="models__link">See More ></a>
                 <p class="models__discription">A scene of a wizard’s desk late at night.</p>
