--- a/contact.html
+++ b/contact.html
@@ -36,17 +36,25 @@
 
 <body>
     <!-- navigation -->
-    <div class="logo">JM</div>
+    <div class="logo">
+        <a href="index.html">
+            <img src="images/JonathanMaIcon.svg" alt="" class="nav__smallImage">
+        </a>
+    </div>
 
     <div class="nav">
-        <div class="nav__logo">JM</div>
+        <div class="nav__logo">
+            <a href="index.html">
+                <img src="images/JonathanMaIcon.svg" alt="">
+            </a>
+        </div>
         <ul class="nav__list">
             <a href="index.html">
                 <li class="nav__link">HOME</li>
             </a>
-            <a href="WebDesigns.html">
+            <!-- <a href="WebDesigns.html">
                 <li class="nav__link">WEB DESIGNS</li>
-            </a>
+            </a> -->
             <a href="3D.html">
                 <li class="nav__link">3D MODELS</li>
             </a>
