--- a/index.html
+++ b/index.html
@@ -40,17 +40,25 @@
 <body>
 
     <!-- navigation -->
-    <div class="logo">JM</div>
+    <div class="logo">
+        <a href="index.html">
+            <img src="images/JonathanMaIcon.svg" alt="" class="nav__smallImage">
+        </a>
+    </div>
 
     <div class="nav">
-        <div class="nav__logo">JM</div>
+        <div class="nav__logo">
+            <a href="index.html">
+                <img src="images/JonathanMaIcon.svg" alt="">
+            </a>
+        </div>
         <ul class="nav__list">
             <a href="index.html">
                 <li class="nav__linkActive">HOME</li>
             </a>
-            <a href="WebDesigns.html">
+            <!-- <a href="WebDesigns.html">
                 <li class="nav__link">WEB DESIGNS</li>
-            </a>
+            </a> -->
             <a href="3D.html">
                 <li class="nav__link">3D MODELS</li>
             </a>
@@ -78,14 +86,14 @@
             <h2 class="projects__title">Featured Projects!</h2>
             <div class="projects__container">
                 <div class="projects__models">
-                    <img src="images/Kitchen/KitchenRender1.jpg" alt="">
-                    <img src="images/Gun/GunRender.jpg" alt="">
+                    <a href="KitchenModel.html"><img src="images/Kitchen/KitchenRender1.jpg" alt=""></a>
+                    <a href="GunModel.html"><img src="images/Gun/GunRender.jpg" alt=""></a>
                     <a href="3D.html"><button class="projects__button">See My 3D Work!</button></a>
                 </div>
-                <div class="projects__designs">
+                <!-- <div class="projects__designs">
                     <img src="images/SchdularPreview.jpg" alt="">
                     <a href="WebDesigns.html"><button class="projects__button">See My Web Designs!</button></a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -133,6 +141,8 @@
             <ul class="skills__list">
                 <li style="background-color: #8D54CB;">Maya</li>
                 <li style="background-color: #8D54CB;">Arnold</li>
+                <li style="background-color: #8D54CB;">Substance Painter</li>
+                <li style="background-color: #8D54CB;">Zbrush</li>
             </ul>
         </div>
     </div>
