--- a/GunModel.html
+++ b/GunModel.html
@@ -54,18 +54,26 @@
 
 <body>
     <!-- navigation -->
-    <div class="logo">JM</div>
+    <div class="logo">
+        <a href="index.html">
+            <img src="images/JonathanMaIcon.svg" alt="" class="nav__smallImage">
+        </a>
+    </div>
 
 
     <div class="nav">
-        <div class="nav__logo">JM</div>
+        <div class="nav__logo">
+            <a href="index.html">
+                <img src="images/JonathanMaIcon.svg" alt="">
+            </a>
+        </div>
         <ul class="nav__list">
             <a href="index.html">
                 <li class="nav__link">HOME</li>
             </a>
-            <a href="WebDesigns.html">
+            <!-- <a href="WebDesigns.html">
                 <li class="nav__link">WEB DESIGNS</li>
-            </a>
+            </a> -->
             <a href="3D.html">
                 <li class="nav__linkActive">3D MODELS</li>
             </a>
@@ -106,7 +114,7 @@
 
     <div class="video__container">
         <div class="video">
-            <iframe src="https://www.youtube.com/embed/gMH-6bkMNTE" title="YouTube video player"
+            <iframe src="https://vimeo.com/618390587" title="GLOCK 17 Gen5 Pistol Turntable"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
 
