--- a/WebDesigns.html
+++ b/WebDesigns.html
@@ -13,18 +13,26 @@
 
 <body>
     <!-- navigation -->
-    <div class="logo">JM</div>
+    <div class="logo">
+        <a href="index.html">
+            <img src="images/JonathanMaIcon.svg" alt="" class="nav__smallImage">
+        </a>
+    </div>
 
 
     <div class="nav">
-        <div class="nav__logo">JM</div>
+        <div class="nav__logo">
+            <a href="index.html">
+                <img src="images/JonathanMaIcon.svg" alt="">
+            </a>
+        </div>
         <ul class="nav__list">
             <a href="index.html">
                 <li class="nav__link">HOME</li>
             </a>
-            <a href="WebDesigns.html">
+            <!-- <a href="WebDesigns.html">
                 <li class="nav__linkActive">WEB DESIGNS</li>
-            </a>
+            </a> -->
             <a href="3D.html">
                 <li class="nav__link">3D MODELS</li>
             </a>
@@ -36,7 +44,7 @@
     </div>
 
 
-    <div class="designs">
+    <div class="designs first">
         <div class="designs__container">
             <div class="design__info">
                 <h2 class="design__title">Schdular</h2>
