--- a/3D.html
+++ b/3D.html
@@ -49,9 +49,10 @@
 
         <div class="models__row">
             <div class="models__containerLeft">
-                <a href=""><img src="images/SeraphineRender.jpg" alt="" class="models_preview"></a>
+                <a href="SeraphineModel.html"><img src="images/Seraphine/SeraphineRender.jpg" alt=""
+                        class="models_preview"></a>
                 <h2 class="models__title">Seraphine Model</h2>
-                <a href="" class="models__link">See More ></a>
+                <a href="SeraphineModel.html" class="models__link">See More ></a>
                 <p class="models__discription">A modeled based off of Seraphine from League of Legends.</p>
             </div>
 
