--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h2 class="projects__title">Featured Projects!</h2>
             <div class="projects__container">
                 <div class="projects__models">
-                    <a href="KitchenModel.html"><img src="images/Kitchen/KitchenRender1.jpg" alt=""></a>
+                    <a href="SeraphineModel.html"><img src="images/Seraphine/SeraphineRender.jpg" alt=""></a>
                     <a href="GunModel.html"><img src="images/Gun/GunRender.jpg" alt=""></a>
                     <a href="3D.html"><button class="projects__button">See My 3D Work!</button></a>
                 </div>
