--- a/SeraphineModel.html
+++ b/SeraphineModel.html
@@ -5,52 +5,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gun Model</title>
+    <title>Kitchen Model</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/modelSlides.css">
+</head>
 
-    <style>
+<style>
+    .video__container {
+        width: 95%;
+        max-width: 1450px;
+        max-height: 700px;
+        margin: auto;
+        margin-bottom: 40px;
+    }
+
+    .video {
+        width: 100%;
+        position: relative;
+        overflow: hidden;
+        padding-top: 50%;
+        /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+    }
+
+    .video iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        border: 0px;
+        border-radius: 10px;
+    }
+
+    @media only screen and (max-width:768px) {
         .video__container {
-            width: 95%;
-            max-width: 1450px;
-            max-height: 700px;
-            margin: auto;
-            margin-bottom: 40px;
-        }
-
-        .video {
             width: 100%;
-            position: relative;
-            overflow: hidden;
-            padding-top: 50%;
-            /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+            margin-bottom: 35px;
         }
 
         .video iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
-            border: 0px;
-            border-radius: 10px;
+            border-radius: 0px;
         }
-
-        @media only screen and (max-width:768px) {
-            .video__container {
-                width: 100%;
-                margin-bottom: 35px;
-            }
-
-            .video iframe {
-                border-radius: 0px;
-            }
-        }
-    </style>
-</head>
+    }
+</style>
 
 <body>
     <!-- navigation -->
@@ -91,15 +91,14 @@
 
         <!-- Full-width images with number and caption text -->
         <div class="slideshow__slide">
-            <img src="images/Gun/GunRender.jpg">
+            <img src="images/Seraphine/SeraphineRender.jpg">
         </div>
         <div class="slideshow__slide">
-            <img src="images/Gun/GunRenderOcclusion.jpg">
+            <img src="images/Seraphine/SeraphineOcclusion.jpg">
         </div>
         <div class="slideshow__slide">
-            <img src="images/Gun/GunRenderWireframe.jpg">
+            <img src="images/Seraphine/SeraphineWireFrame.jpg">
         </div>
-
 
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -107,20 +106,20 @@
     </div>
 
     <div class="slideshow__carousel">
-        <img src="images/Gun/GunRender.jpg" onclick="currentSlide(1)" class="slideshow__button">
-        <img src="images/Gun/GunRenderOcclusion.jpg" onclick="currentSlide(2)" class="slideshow__button">
-        <img src="images/Gun/GunRenderWireframe.jpg" onclick="currentSlide(3)" class="slideshow__button">
+        <img src="images/Seraphine/SeraphineRender.jpg" onclick="currentSlide(1)" class="slideshow__button">
+        <img src="images/Seraphine/SeraphineOcclusion.jpg" onclick="currentSlide(2)" class="slideshow__button">
+        <img src="images/Seraphine/SeraphineWireFrame.jpg" onclick="currentSlide(3)" class="slideshow__button">
     </div>
+
 
     <div class="video__container">
         <div class="video">
-            <iframe src="https://player.vimeo.com/video/618390587?h=5a4778f9e3" title="GLOCK 17 Gen5 Pistol Turntable"
+            <iframe src="https://player.vimeo.com/video/620948185?h=6bd6581055" title="Seraphine Turntable"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
 
         </div>
     </div>
-
 
 
     <div class="modelInfo">
