fixed project formatting

--- a/3D.html
+++ b/3D.html
@@ -53,14 +53,15 @@
                         class="models_preview"></a>
                 <h2 class="models__title">Seraphine Model</h2>
                 <a href="SeraphineModel.html" class="models__link">See More ></a>
-                <p class="models__discription">A modeled based off of Seraphine from League of Legends.</p>
+                <p class="models__discription">A modeled based off of the character Seraphine from League of Legends.
+                </p>
             </div>
 
             <div class="models__containerRight">
                 <a href="GunModel.html"><img src="images/Gun/GunRender.jpg" alt="" class="models_preview"></a>
                 <h2 class="models__title">Gun Model</h2>
                 <a href="GunModel.html" class="models__link">See More ></a>
-                <p class="models__discription">A gun modeled based of the Glock 17 Gen5 pistol.</p>
+                <p class="models__discription">A hard-surface gun modeled based of the Glock 17 Gen5 pistol.</p>
             </div>
         </div>
 
