--- a/GunModel.html
+++ b/GunModel.html
@@ -125,7 +125,9 @@
 
     <div class="modelInfo">
         <h2>About</h2>
-        <p></p>
+        <p>A hard surface model of the GLOCK 17 Gen5. It was a great experience learning how to create all of the detail
+            in this model; I was able to experiment with many different tools and technics in Maya and overall was very
+            happy with the final render. Modeled in Maya 2020 and Rendered in Arnold 2020.</p>
     </div>
 </body>
 
