--- a/KitchenModel.html
+++ b/KitchenModel.html
@@ -97,8 +97,8 @@
 
     <div class="modelInfo">
         <h2>About</h2>
-        <p>A modeled kitchen scene based of my parents kitchen in Maine. Modeled in Maya 2020 and rendered using Arnold
-            2020.</p>
+        <p>A hard surface model of my family's kitchen in Maine. All the assets were created in Maya 2020 and the
+            rending was all done in Arnold 2020..</p>
     </div>
 </body>
 
