--- a/SeraphineModel.html
+++ b/SeraphineModel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kitchen Model</title>
+    <title>Seraphine Model</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/modelSlides.css">
@@ -124,7 +124,8 @@
 
     <div class="modelInfo">
         <h2>About</h2>
-        <p></p>
+        <p>A 3D render of Seraphine (indie skin) from League of Legends, original art by Alex Flores. Modeled, UV
+            unwrapped, and rigged In Maya 2020/2022. Textured in Clip Studio Paint. Rendered with Arnold 2022.</p>
     </div>
 </body>
 
