--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
                 <div class="projects__models">
                     <a href="SeraphineModel.html"><img src="images/Seraphine/SeraphineRender.jpg" alt=""></a>
                     <a href="GunModel.html"><img src="images/Gun/GunRender.jpg" alt=""></a>
-                    <a href="3D.html"><button class="projects__button">See My 3D Work!</button></a>
                 </div>
                 <!-- <div class="projects__designs">
                     <img src="images/SchdularPreview.jpg" alt="">
                     <a href="WebDesigns.html"><button class="projects__button">See My Web Designs!</button></a>
                 </div> -->
+                <div class="project__button__container">
+                    <a href="3D.html">See My 3D Work!</a>
+                </div>
             </div>
         </div>
     </div>
@@ -102,17 +104,19 @@
     <!-- skills -->
     <h2 class="skills__title">What I Can Do!</h2>
     <div class="skills">
+
         <div class="skills__card">
             <div class="skills__left">
                 <div class="skills__icon">
-                    <img src="images/WebDevIcon.svg" alt="">
+                    <img src="images/ModelIcon2.svg" alt="">
                 </div>
-                <h2 class="skills__cardTitle" style="color: #CE1C70;">Web Development</h2>
+                <h2 class="skills__cardTitle" style="color: #8D54CB">3D Modeling</h2>
             </div>
             <ul class="skills__list">
-                <li style="background-color: #CE1C70;">JavaScript</li>
-                <li style="background-color: #CE1C70;">HTML</li>
-                <li style="background-color: #CE1C70;">CSS</li>
+                <li style="background-color: #8D54CB;">Maya</li>
+                <li style="background-color: #8D54CB;">Arnold</li>
+                <li style="background-color: #8D54CB;">Zbrush</li>
+                <li style="background-color: #8D54CB;">Substance Painter</li>
             </ul>
         </div>
 
@@ -134,15 +138,14 @@
         <div class="skills__card">
             <div class="skills__left">
                 <div class="skills__icon">
-                    <img src="images/ModelIcon.svg" alt="">
+                    <img src="images/WebDevIcon.svg" alt="">
                 </div>
-                <h2 class="skills__cardTitle" style="color: #8D54CB">3D Modeling</h2>
+                <h2 class="skills__cardTitle" style="color: #CE1C70;">Web Development</h2>
             </div>
             <ul class="skills__list">
-                <li style="background-color: #8D54CB;">Maya</li>
-                <li style="background-color: #8D54CB;">Arnold</li>
-                <li style="background-color: #8D54CB;">Substance Painter</li>
-                <li style="background-color: #8D54CB;">Zbrush</li>
+                <li style="background-color: #CE1C70;">JavaScript</li>
+                <li style="background-color: #CE1C70;">HTML</li>
+                <li style="background-color: #CE1C70;">CSS</li>
             </ul>
         </div>
     </div>
@@ -155,13 +158,13 @@
 
         <div class="about__info">
             <p class="about__title">Need 3D Models?<br>
-                Want Creative Web Designs?<br>
+                <!-- Want Creative Web Designs?<br> -->
                 <span class="about__title highlight">I’m Your Guy!</span>
             </p>
             <div class="about__headshotSmall">
                 <img src="images/JonathanMa2.png" alt="">
             </div>
-            <p class="about__discription">I’m a UI/UX designer and a 3D modeler that loves to create. I’ve always
+            <p class="about__discription">I’m a 3D modeler that loves to create. I’ve always
                 believed
                 that in order to make something new and meaningful is to love the process and to share that with others.
                 Design and art are wherever you look, and creating something that you know has made an impact is what
