change email link

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 
     <div class="contact__background">
         <h2 class="contact__title">Let's Connect!</h2>
-        <form class="contact" action="https://formsubmit.co/ratherbejon@gmail.com" method="POST">
+        <form class="contact" action="https://formsubmit.co/ma.jo@northeastern.edu" method="POST">
             <input type="hidden" name="_next" value="https://jonathanma1.com/ThankYou.html">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="New submission!">
