added links to skils

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <!-- hero -->
     <div class="hero">
         <div class="hero__image">
-            <img src="images/JonSquare.png" alt="">
+            <img src="images/JonSquare.jpg" alt="">
         </div>
         <div class="hero__info">
             <p>Welcome! My name is Jonathan Ma and I create stunning 3D models.</p>
@@ -191,10 +191,18 @@
                 <h2 class="skills__cardTitle" style="color: #8D54CB">3D Modeling</h2>
             </div>
             <ul class="skills__list">
-                <li style="background-color: #8D54CB;">Maya</li>
-                <li style="background-color: #8D54CB;">Arnold</li>
-                <li style="background-color: #8D54CB;">Zbrush</li>
-                <li style="background-color: #8D54CB;">Substance Painter</li>
+                <a href="https://www.autodesk.com/products/maya/overview?term=1-YEAR&tab=subscription" target="_blank">
+                    <li style="background-color: #8D54CB;">Maya</li>
+                </a>
+                <a href="https://www.autodesk.com/products/arnold/overview" target="_blank">
+                    <li style="background-color: #8D54CB;">Arnold</li>
+                </a>
+                <a href="http://pixologic.com/zbrush/downloadcenter/" target="_blank">
+                    <li style="background-color: #8D54CB;">Zbrush</li>
+                </a>
+                <a href="https://creativecloud.adobe.com/apps/all/desktop/pdp/substance3d-painter" target="_blank">
+                    <li style="background-color: #8D54CB;">Substance Painter</li>
+                </a>
             </ul>
         </div>
 
@@ -206,10 +214,18 @@
                 <h2 class="skills__cardTitle" style="color: #516DC9;">Design</h2>
             </div>
             <ul class="skills__list">
-                <li style="background-color: #516DC9;">Clip Studio Paint</li>
-                <li style="background-color: #516DC9;">Adobe XD</li>
-                <li style="background-color: #516DC9;">Photoshop</li>
-                <li style="background-color: #516DC9;">Illustrator</li>
+                <a href="https://www.clipstudio.net/en/" target="_blank">
+                    <li style="background-color: #516DC9;">Clip Studio Paint</li>
+                </a>
+                <a href="https://creativecloud.adobe.com/apps/all/desktop/pdp/xd" target="_blank">
+                    <li style="background-color: #516DC9;">Adobe XD</li>
+                </a>
+                <a href="https://creativecloud.adobe.com/apps/all/desktop/pdp/photoshop" target="_blank">
+                    <li style="background-color: #516DC9;">Photoshop</li>
+                </a>
+                <a href="https://creativecloud.adobe.com/apps/all/desktop/pdp/illustrator" target="_blank">
+                    <li style="background-color: #516DC9;">Illustrator</li>
+                </a>
             </ul>
         </div>
 
@@ -221,9 +237,16 @@
                 <h2 class="skills__cardTitle" style="color: #CE1C70;">Web Development</h2>
             </div>
             <ul class="skills__list">
-                <li style="background-color: #CE1C70;">JavaScript</li>
-                <li style="background-color: #CE1C70;">HTML</li>
-                <li style="background-color: #CE1C70;">CSS</li>
+                <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">
+                    <li style="background-color: #CE1C70;">JavaScript</li>
+                </a>
+                <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">
+                    <li style="background-color: #CE1C70;">HTML</li>
+                </a>
+                <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">
+                    <li style="background-color: #CE1C70;">CSS</li>
+                </a>
+
             </ul>
         </div>
     </div>
