--- a/ThankYou.html
+++ b/ThankYou.html
@@ -29,12 +29,12 @@
             <a href="index.html">
                 <li class="nav__link">HOME</li>
             </a>
-            <a href="WebDesigns.html">
+            <!-- <a href="WebDesigns.html">
                 <li class="nav__link">WEB DESIGNS</li>
-            </a>
-            <!-- <a href="3D.html">
-                <li class="nav__link">3D MODELS</li>
             </a> -->
+            <a href="3D.html">
+                <li class="nav__link">3D MODELS</li>
+            </a>
             <a href="contact.html">
                 <li class="nav__linkActive">CONTACT</li>
             </a>
