--- a/index.html
+++ b/index.html
@@ -237,15 +237,15 @@
                 <h2 class="skills__cardTitle" style="color: #CE1C70;">Web Development</h2>
             </div>
             <ul class="skills__list">
-                <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">
-                    <li style="background-color: #CE1C70;">JavaScript</li>
-                </a>
-                <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">
-                    <li style="background-color: #CE1C70;">HTML</li>
-                </a>
-                <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">
-                    <li style="background-color: #CE1C70;">CSS</li>
-                </a>
+                <!-- <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"> -->
+                <li style="background-color: #CE1C70;">JavaScript</li>
+                <!-- </a> -->
+                <!-- <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"> -->
+                <li style="background-color: #CE1C70;">HTML</li>
+                <!-- </a> -->
+                <!-- <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"> -->
+                <li style="background-color: #CE1C70;">CSS</li>
+                <!-- </a> -->
 
             </ul>
         </div>
