got rid of wizard scene

--- a/3D.html
+++ b/3D.html
@@ -74,13 +74,13 @@
                 <p class="models__discription">A scene based off of my parent's kitchen in Maine.</p>
             </div>
 
-            <div class="models__containerRight">
+            <!-- <div class="models__containerRight">
                 <a href="WizardScene.html"><img src="images/Wizard/WizardSceneRender.jpg" alt=""
                         class="models_preview"></a>
                 <h2 class="models__title">Wizard Scene</h2>
                 <a href="WizardScene.html" class="models__link">See More ></a>
                 <p class="models__discription">A scene of a wizard’s desk late at night.</p>
-            </div>
+            </div> -->
         </div>
 
     </div>
