--- a/ThankYou.html
+++ b/ThankYou.html
@@ -43,7 +43,7 @@
 
     <div class="contact__background">
         <h2 class="thanks">Message Sent! <br>
-            Thanks for Saying Hi!!!</h2>
+            Thanks for Saying Hi!</h2>
     </div>
 </body>
 
