--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="projects__backgroundBottom" style="background-image: url(images/BlueWaveBottom.svg);"></div>
 
     <!-- skills -->
-    <h2 class="skills__title">What I Can Do!</h2>
+    <h2 class="skills__title">My Skills!</h2>
     <div class="skills">
 
         <div class="skills__card">
